[MOB-865] Added missing progress bar text. Fixed progress bar drawable

--- a/app/src/main/res/layout/item_promotions_progress.xml
+++ b/app/src/main/res/layout/item_promotions_progress.xml
@@ -50,11 +50,27 @@
         android:layout_height="4dp"
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_marginTop="@dimen/normal_margin"
-        android:layout_marginEnd="@dimen/big_margin"
+        android:layout_marginEnd="@dimen/normal_margin"
+        android:max="100"
+        android:progress="80"
         android:progressDrawable="@drawable/promotions_progress_bar"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/progress_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/progress_icon"
+        />
+
+    <TextView
+        android:id="@+id/progress_label"
+        style="@style/Promotions.TextStyle.Progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/normal_margin"
+        android:gravity="end|center_vertical"
+        app:layout_constraintBottom_toBottomOf="@id/progress_current"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/progress_current"
+        app:layout_constraintTop_toTopOf="@id/progress_current"
+        tools:text="200/200"
         />
 
     <LinearLayout
