--- a/app/src/main/res/drawable/promotions_progress_bar.xml
+++ b/app/src/main/res/drawable/promotions_progress_bar.xml
@@ -9,15 +9,17 @@
   </item>
 
   <item android:id="@android:id/progress">
-    <shape>
-      <corners android:radius="12dp" />
-      <gradient
-          android:angle="180"
-          android:endColor="#ff9800"
-          android:startColor="#f5c406"
-          android:type="linear"
-          android:useLevel="false" />
-    </shape>
+    <scale android:scaleWidth="100%">
+      <shape>
+        <corners android:radius="12dp" />
+        <gradient
+            android:angle="180"
+            android:endColor="#ff9800"
+            android:startColor="#f5c406"
+            android:type="linear"
+            android:useLevel="false" />
+      </shape>
+    </scale>
   </item>
 
 </layer-list>
