--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -595,6 +595,11 @@
     <item name="android:textSize">12sp</item>
   </style>
 
+  <style name="Promotions.TextStyle.Progress" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">#01131f</item>
+    <item name="android:textSize">10sp</item>
+  </style>
+
   <style name="Promotions.TextStyle.Title.Disabled" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
     <item name="android:textColor">#01131f</item>
     <item name="android:textSize">12sp</item>
