--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -27,11 +27,11 @@
       android:layout="@layout/preference_without_summary_layout"
       android:title="@string/import_wallet_title" />
 
-  <Preference
+  <SwitchPreference
       android:id="@+id/fingerprint_preference"
       android:icon="@drawable/ic_settings_fingerprint"
       android:key="pref_fingerprint"
-      android:layout="@layout/preference_without_summary_layout"
+      android:layout="@layout/preference_fingerprint"
       android:title="@string/fingerprint_settings" />
 
   <PreferenceCategory
@@ -66,7 +66,7 @@
         android:layout="@layout/preference_without_summary_layout"
         android:title="@string/twitter" />
 
-    <Preference
+    <SwitchPreference
         android:icon="@drawable/ic_settings_telegram"
         android:key="pref_telegram"
         android:layout="@layout/preference_without_summary_layout"
