--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -169,53 +169,64 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="14dp"
                 android:src="@drawable/ic_wallet_black"
+                app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
             <TextView
                 android:id="@+id/active_wallet_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_toEndOf="@id/wallet_icon"
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/wallets_active_wallet_title"
                 android:textColor="@color/black"
                 android:textSize="10sp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                app:layout_constraintWidth_default="wrap"
                 app:layout_constraintBottom_toBottomOf="@id/wallet_icon"
                 app:layout_constraintStart_toEndOf="@id/wallet_icon"
                 app:layout_constraintTop_toTopOf="@id/wallet_icon"
+                app:layout_constraintEnd_toStartOf="@id/verification_status"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintHorizontal_bias="0"
                 />
 
-            <include
-                android:id="@+id/verified_wallet_chip"
-                layout="@layout/verified_wallet_chip"
-                android:layout_width="70dp"
+            <RelativeLayout
+                android:id="@+id/verification_status"
+                android:layout_width="wrap_content"
                 android:layout_height="16dp"
-                android:layout_marginStart="10dp"
-                android:visibility="gone"
+                android:layout_marginStart="3dp"
                 app:layout_constraintBottom_toBottomOf="@id/active_wallet_text"
+                app:layout_constraintEnd_toStartOf="@id/copy_address"
                 app:layout_constraintStart_toEndOf="@id/active_wallet_text"
                 app:layout_constraintTop_toTopOf="@id/active_wallet_text"
-                tools:visibility="gone"
-                />
+                >
 
-            <include
-                android:id="@+id/unverified_wallet_chip"
-                layout="@layout/unverified_wallet_chip"
-                android:layout_width="80dp"
-                android:layout_height="16dp"
-                android:layout_marginStart="10dp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@id/active_wallet_text"
-                app:layout_constraintStart_toEndOf="@id/active_wallet_text"
-                app:layout_constraintTop_toTopOf="@id/active_wallet_text"
-                tools:visibility="visible"
-                />
+              <include
+                  android:id="@+id/verified_wallet_chip"
+                  layout="@layout/verified_wallet_chip"
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:visibility="gone"
+                  tools:visibility="visible"
+                  />
+
+              <include
+                  android:id="@+id/unverified_wallet_chip"
+                  layout="@layout/unverified_wallet_chip"
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:visibility="gone"
+                  tools:visibility="visible"
+                  />
+            </RelativeLayout>
+
 
             <TextView
                 android:id="@+id/active_wallet_address"
@@ -233,7 +244,7 @@
                 app:layout_constraintEnd_toStartOf="@id/copy_address"
                 app:layout_constraintStart_toStartOf="@id/wallet_icon"
                 app:layout_constraintTop_toBottomOf="@id/wallet_icon"
-                tools:text="0x8Eb48d1368bbc7731ac5c9jgoidiubhifhgiuhfiughiufhgiufhgiufiughfiugh"
+                tools:text="0x8Eb48d1368bbc7731ac5c98Eb48d1368bbc7731ac5c9"
                 />
 
             <Button
@@ -253,45 +264,42 @@
 
             <ImageView
                 android:id="@+id/copy_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="6dp"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_marginEnd="8dp"
                 android:background="@drawable/borderless_button_background"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="8dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_copy_to_clip"
-                app:layout_constraintBottom_toTopOf="@id/verify_wallet_button"
                 app:layout_constraintEnd_toStartOf="@id/wallet_qr_code"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/wallet_icon"
                 />
             <ImageView
                 android:id="@+id/wallet_qr_code"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="6dp"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_marginEnd="8dp"
                 android:background="@drawable/borderless_button_background"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="8dp"
+                android:padding="3dp"
                 android:src="@drawable/ic_qr_code"
-                app:layout_constraintBottom_toTopOf="@id/verify_wallet_button"
                 app:layout_constraintEnd_toStartOf="@id/backup_active_button"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/wallet_icon"
                 />
             <ImageView
                 android:id="@+id/backup_active_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/borderless_button_background"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="8dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_backup_black"
-                app:layout_constraintBottom_toTopOf="@id/verify_wallet_button"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/wallet_icon"
                 />
           </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
