[MOB-865] Fixed layout display when user is on max level. Progress bar now matches the progress. Fixed wrong mapping in certain situations. Changed sentence below gamification for the correct one. Added margins to Gamification Level up items.

--- a/app/src/main/res/layout/item_promotions_progress.xml
+++ b/app/src/main/res/layout/item_promotions_progress.xml
@@ -34,7 +34,7 @@
         style="@style/Promotions.TextStyle.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginStart="12dp"
         android:layout_marginEnd="@dimen/big_margin"
         app:layout_constraintBottom_toBottomOf="@+id/progress_icon"
         app:layout_constraintEnd_toEndOf="parent"
