[MOB-893] Refactored code for how the authentication is initiated within the payment flow. Switch button bug fixes.

--- a/app/src/main/res/layout/preference_fingerprint_off.xml
+++ b/app/src/main/res/layout/preference_fingerprint_off.xml
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:clickable="false"
         android:focusable="false"
-        android:checked="true"
+        android:checked="false"
         />
 
     <androidx.constraintlayout.widget.Guideline
