--- a/app/src/main/res/layout/item_transaction_perk_bonus.xml
+++ b/app/src/main/res/layout/item_transaction_perk_bonus.xml
@@ -19,48 +19,56 @@
       app:layout_constraintTop_toTopOf="parent"
       tools:src="@drawable/transactions_promotion_bonus"
       />
-
-  <TextView
-      android:id="@+id/bonus_title"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="12dp"
-      android:layout_marginTop="16dp"
-      android:layout_marginEnd="16dp"
-      android:background="@drawable/oval_green_background"
-      android:fontFamily="sans-serif"
-      android:letterSpacing="0.01"
-      android:paddingHorizontal="12dp"
-      android:paddingVertical="5dp"
-      android:textColor="#1fcf1f"
-      android:textSize="14sp"
-      android:textStyle="bold"
-      app:layout_constrainedWidth="true"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0"
-      app:layout_constraintStart_toEndOf="@id/img"
-      app:layout_constraintTop_toTopOf="parent"
-      tools:text="+100 Appcoins Credits Bonus!"
-      />
-  <TextView
-      android:id="@+id/bonus_description"
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="20dp"
-      android:layout_marginTop="4dp"
+      android:layout_marginStart="12dp"
       android:layout_marginEnd="16dp"
-      android:ellipsize="end"
-      android:fontFamily="sans-serif"
-      android:maxLines="3"
-      android:textColor="@color/grey_alpha_active_54"
-      android:textSize="12sp"
-      android:textStyle="normal"
+      android:paddingVertical="16dp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/img"
-      app:layout_constraintTop_toBottomOf="@id/bonus_title"
-      tools:text="Because you spent more than 200 AppCoins in the last 5 days."
-      />
-
+      app:layout_constraintTop_toTopOf="parent"
+      >
+    <TextView
+        android:id="@+id/bonus_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/oval_green_background"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif"
+        android:letterSpacing="0.01"
+        android:maxLines="2"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:textColor="#1fcf1f"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="+100 Appcoins Credits Bonus!"
+        />
+    <TextView
+        android:id="@+id/bonus_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif"
+        android:maxLines="3"
+        android:textColor="@color/grey_alpha_active_54"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bonus_title"
+        tools:text="Because you spent more than 200 AppCoins in the last 5 days."
+        />
+  </androidx.constraintlayout.widget.ConstraintLayout>
   <View
       android:layout_width="match_parent"
       android:layout_height="1dp"
