[MOB-880] Applying changes from code review

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -70,10 +70,7 @@
       android:layout_marginStart="@dimen/big_margin"
       android:layout_marginEnd="@dimen/big_margin"
       android:layout_marginBottom="@dimen/big_padding"
-      android:ellipsize="end"
-      android:maxLines="1"
-      android:textColor="@color/transaction_item_snd_text_color"
-      android:textSize="12sp"
+      style="@style/TransactionsItem.Description"
       app:layout_constrainedWidth="true"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@id/value"
