--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -615,5 +615,25 @@
     <item name="android:textSize">11sp</item>
   </style>
 
+  <style name="TransactionsItem.Title.Special" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">#1fcf1f</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:background">@drawable/oval_green_background</item>
+    <item name="android:ellipsize">end</item>
+    <item name="android:letterSpacing">0.01</item>
+    <item name="android:maxLines">2</item>
+  </style>
+
+  <style name="TransactionsItem.Description" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/transaction_item_snd_text_color</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:ellipsize">end</item>
+    <item name="android:maxLines">1</item>
+  </style>
+
+  <style name="TransactionsItem.Description.Extended">
+    <item name="android:maxLines">3</item>
+  </style>
 
 </resources>
