--- a/app/src/main/res/layout/item_card_notification.xml
+++ b/app/src/main/res/layout/item_card_notification.xml
@@ -53,7 +53,7 @@
         android:text="@string/referral_notification_bonus_pending_title"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:autoSizeMinTextSize="12sp"
+        app:autoSizeMinTextSize="14sp"
         app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/notification_image"
@@ -70,48 +70,53 @@
         android:maxLines="2"
         android:minLines="2"
         android:text="@string/referral_notification_bonus_pending_body"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/notification_title"
         app:layout_constraintTop_toBottomOf="@id/notification_title"
         />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/notification_positive_button"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/big_margin"
-        android:backgroundTint="@color/white"
-        android:fontFamily="sans-serif-medium"
-        android:letterSpacing="0.09"
-        android:lineSpacingExtra="0sp"
-        android:maxWidth="252dp"
-        android:minWidth="80dp"
-        android:text="@string/gamification_APPCapps_button"
-        android:textColor="@color/text_button_color"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/notification_description"
-        app:rippleColor="@color/button_borderless_ripple_color"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/notification_dismiss_button"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/white"
-        android:maxWidth="252dp"
-        android:minWidth="80dp"
-        android:text="@string/dismiss_button"
-        android:textColor="@color/dialog_buy_value_text"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@id/notification_positive_button"
-        app:layout_constraintEnd_toStartOf="@id/notification_positive_button"
         app:layout_constraintTop_toBottomOf="@+id/notification_description"
-        app:rippleColor="@color/button_borderless_ripple_color"
-        />
+
+        >
+      <com.google.android.material.button.MaterialButton
+          android:id="@+id/notification_positive_button"
+          style="@style/Widget.MaterialComponents.Button.TextButton"
+          android:layout_width="wrap_content"
+          android:layout_height="@dimen/button_height"
+          android:backgroundTint="@color/white"
+          android:fontFamily="sans-serif-medium"
+          android:letterSpacing="0.09"
+          android:lineSpacingExtra="0sp"
+          android:maxWidth="252dp"
+          android:minWidth="80dp"
+          android:textColor="@color/text_button_color"
+          android:textSize="12sp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:rippleColor="@color/button_borderless_ripple_color"
+          tools:text="@string/gamification_APPCapps_button"
+          />
+
+      <com.google.android.material.button.MaterialButton
+          android:id="@+id/notification_dismiss_button"
+          style="@style/Widget.MaterialComponents.Button.TextButton"
+          android:layout_width="wrap_content"
+          android:layout_height="@dimen/button_height"
+          android:backgroundTint="@color/white"
+          android:maxWidth="252dp"
+          android:minWidth="80dp"
+          android:text="@string/dismiss_button"
+          android:textColor="@color/dialog_buy_value_text"
+          android:textSize="12sp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toStartOf="@id/notification_positive_button"
+          app:rippleColor="@color/button_borderless_ripple_color"
+          />
+    </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
