--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,4 +45,5 @@
   <dimen name="gamification_card_margin">16dp</dimen>
   <dimen name="bottom_sheet_corner_radius">8dp</dimen>
   <dimen name="promotions_item_margin">8dp</dimen>
+  <dimen name="bottom_sheet_peek_height">96dp</dimen>
 </resources>
