--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <dimen name="bottom_sheet_peek_height">72dp</dimen>
+  <dimen name="wallets_button_size">28dp</dimen>
 </resources>
