--- a/app/src/main/res/layout/item_wallet_addr.xml
+++ b/app/src/main/res/layout/item_wallet_addr.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="@dimen/item_wallet_addr_height"
     android:background="@drawable/item_curved_border"
     android:orientation="horizontal"
     android:padding="16dp"
@@ -11,8 +11,8 @@
 
   <ImageView
       android:id="@+id/icon"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="@dimen/item_wallet_icon_width"
+      android:layout_height="@dimen/item_wallet_icon_height"
       android:layout_alignParentStart="true"
       android:layout_centerVertical="true"
       android:src="@drawable/ic_wallet_address"
