--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
   <dimen name="bottom_sheet_peek_height">72dp</dimen>
   <dimen name="wallets_button_size">28dp</dimen>
+  <dimen name="item_wallet_addr_height">56dp</dimen>
+  <dimen name="item_wallet_icon_height">25dp</dimen>
+  <dimen name="item_wallet_icon_width">23dp</dimen>
 </resources>
