--- a/app/src/main/res/layout-land/fragment_backup_creation_layout.xml
+++ b/app/src/main/res/layout-land/fragment_backup_creation_layout.xml
@@ -19,7 +19,7 @@
           android:id="@+id/animation"
           android:layout_width="120dp"
           android:layout_height="120dp"
-          android:layout_marginTop="58dp"
+          android:layout_marginTop="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
           android:id="@+id/backup_confirmation_image"
           android:layout_width="120dp"
           android:layout_height="120dp"
-          android:layout_marginTop="58dp"
+          android:layout_marginTop="8dp"
           android:visibility="gone"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="56dp"
-          android:layout_marginTop="24dp"
+          android:layout_marginTop="12dp"
           android:layout_marginEnd="56dp"
           android:gravity="center"
           android:text="@string/backup_confirmation_title"
@@ -62,9 +62,8 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="56dp"
-          android:layout_marginTop="32dp"
+          android:layout_marginTop="8dp"
           android:layout_marginEnd="56dp"
-          android:layout_marginBottom="8dp"
           android:gravity="center"
           android:text="@string/backup_confirmation_body"
           app:layout_constraintBottom_toBottomOf="parent"
@@ -77,13 +76,14 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/button_container"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:clipChildren="false"
       android:clipToPadding="false"
-      android:paddingBottom="6dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHeight_max="94dp"
       app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
       >
     <View
         android:id="@+id/separator"
@@ -100,61 +100,72 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/proceed_button"
         style="@style/MaterialButtonStyle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:enabled="false"
+        android:paddingStart="68dp"
+        android:paddingEnd="68dp"
         android:text="@string/backup_save_button"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@id/save_again_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/separator"
         tools:visibility="visible"
         />
 
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/finish_button"
         style="@style/MaterialButtonStyle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="64dp"
         android:text="@string/backup_confirmation_yes"
-        app:layout_constraintBottom_toTopOf="@id/save_again_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/half_vertical_guideline"
         app:layout_constraintTop_toBottomOf="@id/separator"
         />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/save_again_button"
         style="@style/MaterialButtonStyle.Light"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="10dp"
         android:text="@string/backup_confirmation_no"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/half_vertical_guideline"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/proceed_button"
+        app:layout_constraintTop_toBottomOf="@id/separator"
         />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/file_shared_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:constraint_referenced_ids="finish_button, save_again_button"
         tools:visibility="visible"
         />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/half_vertical_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        />
   </androidx.constraintlayout.widget.ConstraintLayout>
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/horizontal_guideline"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_percent="0.683"
+      />
 </androidx.constraintlayout.widget.ConstraintLayout>
