[bugfix/MOB-975] - 1- Add fix width size to bottom sheet buttons so that longer strings can be split; 2- Add gravity to the wallet creation animation so that split strings can still be centered; 3- Add margin to backup tool tip so that split strings still have a small margin to the left side of the text balloon

--- a/app/src/main/res/layout/backup_tooltip.xml
+++ b/app/src/main/res/layout/backup_tooltip.xml
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="13dp"
+            android:layout_marginStart="13dp"
             android:backgroundTint="@color/white"
             android:maxWidth="126dp"
             android:minWidth="80dp"
@@ -68,10 +69,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:backgroundTint="@color/white"
-            android:maxWidth="126dp"
+            android:maxWidth="160dp"
             android:minWidth="80dp"
-            android:paddingStart="6dp"
-            android:paddingEnd="6dp"
+            android:paddingStart="2dp"
+            android:paddingEnd="2dp"
             android:text="@string/backup_tooltip_backup_button"
             android:textColor="@color/text_button_color"
             android:textSize="14sp"
