--- a/app/src/main/res/layout/remove_backup_buttons_layout.xml
+++ b/app/src/main/res/layout/remove_backup_buttons_layout.xml
@@ -6,7 +6,7 @@
     >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/remove_button_layout"
-      android:layout_width="wrap_content"
+      android:layout_width="150dp"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
@@ -45,7 +45,7 @@
   </androidx.constraintlayout.widget.ConstraintLayout>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/backup_button_layout"
-      android:layout_width="wrap_content"
+      android:layout_width="150dp"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
