[MOB-720] Made several improvements to buttons, naming and extraction to styles as request in the review

--- a/app/src/main/res/layout-land/fragment_backup_creation_layout.xml
+++ b/app/src/main/res/layout-land/fragment_backup_creation_layout.xml
@@ -50,7 +50,6 @@
           android:layout_marginStart="56dp"
           android:layout_marginTop="12dp"
           android:layout_marginEnd="56dp"
-          android:gravity="center"
           android:text="@string/backup_confirmation_title"
           app:layout_constraintBottom_toTopOf="@id/description"
           app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +65,6 @@
           android:layout_marginStart="56dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="56dp"
-          android:gravity="center"
           android:text="@string/backup_confirmation_body"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
@@ -97,14 +95,12 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/proceed_button"
-        style="@style/MaterialButtonStyle"
+        style="@style/MaterialButtonStyle.Backup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:enabled="false"
-        android:paddingStart="68dp"
-        android:paddingEnd="68dp"
         android:text="@string/backup_save_button"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
