--- a/app/src/main/res/layout-land/fragment_wallets_bottom_sheet.xml
+++ b/app/src/main/res/layout-land/fragment_wallets_bottom_sheet.xml
@@ -19,7 +19,7 @@
         android:id="@+id/top_separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:background="#fbfbfb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         style="@style/GamificationBottomPeekTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="4dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
@@ -56,7 +56,7 @@
         android:id="@+id/wallets_skeleton"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -85,7 +85,7 @@
         style="@style/GamificationBottomPeekTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="4dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +99,7 @@
         android:id="@+id/accumulated_value_skeleton"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/vertical_guideline3"
         app:layout_constraintTop_toTopOf="parent"
@@ -175,7 +175,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
-          android:layout_marginTop="24dp"
+          android:layout_marginTop="16dp"
           android:letterSpacing="0.01"
           android:text="@string/wallets_active_wallet_title"
           android:textColor="@color/black_87_alpha"
@@ -217,7 +217,9 @@
           android:layout_marginBottom="8dp"
           android:background="@drawable/background_card"
           android:elevation="2dp"
+          android:orientation="vertical"
           android:overScrollMode="never"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
@@ -229,7 +231,7 @@
       android:id="@+id/bottom_sheet_bottom_separator"
       android:layout_width="match_parent"
       android:layout_height="2dp"
-      android:layout_marginBottom="16dp"
+      android:layout_marginBottom="12dp"
       android:background="#f3f3f3"
       app:layout_constraintBottom_toTopOf="@id/import_create_layout"
       app:layout_constraintEnd_toEndOf="parent"
