--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -157,10 +157,15 @@
     <item name="android:textSize">14sp</item>
     <item name="android:paddingStart">@dimen/big_padding</item>
     <item name="android:paddingEnd">@dimen/big_padding</item>
-    <item name="android:minWidth">64dp</item>
     <item name="android:minHeight">36dp</item>
     <item name="android:letterSpacing">.09</item>
     <item name="android:elevation">2dp</item>
+  </style>
+
+  <style name="MaterialButtonStyle.Backup" parent="MaterialButtonStyle">
+    <item name="android:minWidth">240dp</item>
+    <item name="android:paddingStart">@dimen/half_large_padding</item>
+    <item name="android:paddingEnd">@dimen/half_large_padding</item>
   </style>
 
   <style name="MaterialButtonStyle.Light">
@@ -172,6 +177,12 @@
   <style name="ButtonStyle.Alternative" parent="ButtonStyle">
     <item name="android:background">@drawable/button_snd_background</item>
     <item name="android:textColor">@color/btn_text_enable_color</item>
+  </style>
+
+  <style name="ButtonStyle.Alternative.Backup" parent="ButtonStyle.Alternative">
+    <item name="android:minWidth">240dp</item>
+    <item name="android:paddingStart">@dimen/half_large_padding</item>
+    <item name="android:paddingEnd">@dimen/half_large_padding</item>
   </style>
 
   <style name="FloatingButtonStyle" parent="Widget.MaterialComponents.Button">
@@ -298,6 +309,11 @@
 
   <style name="TextAppearance.AppCompat.Body1.Roboto.Medium.White">
     <item name="android:textColor">#ffffff</item>
+  </style>
+
+  <style name="RestoreTitleTextStyle" parent="@style/TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/black_87_alpha</item>
+    <item name="android:textSize">14sp</item>
   </style>
 
   <style name="RewardsLevelTextStyle">
@@ -540,12 +556,14 @@
   <style name="WalletBackupTextStyle.Big">
     <item name="android:textSize">16sp</item>
     <item name="android:letterSpacing">.009</item>
+    <item name="android:gravity">center</item>
   </style>
 
   <style name="WalletBackupTextStyle.Title" parent="TextAppearance.AppCompat.Headline.Roboto.Medium">
     <item name="android:textColor">#000000</item>
     <item name="android:textSize">18sp</item>
     <item name="android:letterSpacing">.009</item>
+    <item name="android:gravity">center</item>
   </style>
 
   <style name="WalletValidationTextStyle.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
