--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/provide_wallet_creating_wallet_header"
+        android:gravity="center"
         />
   </LinearLayout>
 
