--- a/app/src/main/res/layout/remove_backup_buttons_layout.xml
+++ b/app/src/main/res/layout/remove_backup_buttons_layout.xml
@@ -6,11 +6,13 @@
     >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/remove_button_layout"
-      android:layout_width="150dp"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginStart="32dp"
+      android:layout_marginEnd="16dp"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
-      app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
+      app:layout_constraintEnd_toStartOf="@+id/vertical_guideline3"
+      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       >
     <ImageView
@@ -45,8 +47,10 @@
   </androidx.constraintlayout.widget.ConstraintLayout>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/backup_button_layout"
-      android:layout_width="150dp"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="32dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="@id/vertical_guideline3"
