--- a/app/src/main/res/layout-land/fragment_billing_address.xml
+++ b/app/src/main/res/layout-land/fragment_billing_address.xml
@@ -224,7 +224,7 @@
 
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/state_layout"
-              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_marginStart="@dimen/small_margin"
@@ -235,16 +235,11 @@
               app:layout_constraintStart_toEndOf="@id/zipcode_layout"
               app:layout_constraintTop_toTopOf="@id/zipcode_layout"
               >
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/state"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="State"
-                android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-                android:inputType="phone"
-                android:maxLines="1"
-                android:textColor="#000000"
-                android:textSize="16sp"
+                android:layout_height="match_parent"
+                android:editable="false"
                 tools:text="CA"
                 />
           </com.google.android.material.textfield.TextInputLayout>
